--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html>
   <head>
     <title>Broadway Design</title>
-    <link href="./resources/css/stlye.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+    <div class="header">
+      <h1>Broadway Design</h1>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="#process">Process</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#contact">Contact<a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="#process">
+      <h2>Our Process</h2>
+      <p><img src="./resources/images/indentiy.svg" alt="Identify"></p>
   </body>
 </html>
