--- a/index.html
+++ b/index.html
@@ -17,8 +17,46 @@
         </ul>
       </nav>
     </div>
-    <div class="#process">
+    <div id="process">
       <h2>Our Process</h2>
-      <p><img src="./resources/images/indentiy.svg" alt="Identify"></p>
+
+      <p><img src="./resources/images/identify.svg" alt="Identify"></p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+
+      <p><img src="./resources/images/understand.svg" alt="Understand"></p>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+
+      <p><img src="./resources/images/execute.svg" alt="Execute"></p>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+
+    <div class="header">
+      <h3>Designed in New York</h3>
+    </div>
+    <div id="work">
+      <h3>Portfolio</h3>
+      <p>Coming soon.</p>
+    </div>
+    <div id="team">
+      <h3>Team</h3>
+      <p>We're hiring!</p>
+    </div>
+    <div id="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555 <br>
+        E-mail: test@example.com <br>
+        Twitter: @test </p>
+    </div>
+    <div class="footer">
+      <p class="copyright">© Broadway 2017</p>
+      <a href="./index.html">Home</a>
+      <a href="#process">Process</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact<a>
+    </div>
   </body>
 </html>
