--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         Twitter: @test </p>
     </div>
     <div class="footer">
-      <p class="copyright">© Broadway 2017</p>
+      <p class="copyright">© Broadway 2017
       <a href="./index.html">Home</a>
       <a href="#process">Process</a>
       <a href="#work">Work</a>
       <a href="#team">Team</a>
-      <a href="#contact">Contact<a>
+      <a href="#contact">Contact<a></p>
     </div>
   </body>
 </html>
